--- a/youbot_moveit_plugins/youbot_arm_kinematics_plugin/package.xml
+++ b/youbot_moveit_plugins/youbot_arm_kinematics_plugin/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.1</version>
   <description>A 5DoF IK solve plugin for moveit</description>
   
-  <author email="arne.hitzmann@ostfalia.de">Arne Hitzmann</maintainer>
+  <author email="arne.hitzmann@ostfalia.de">Arne Hitzmann</author>
   <maintainer email="nss.nikolas@gmail.com">Nikolas Semenov</maintainer>
   
   <license>BSD</license>
